<resources>
    <string name="app_name">Fruit Atlas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_calorie_list">Add new calorie list</string>
    <string name="remove_from_calorie_list">Remove from calorie list</string>
    <string name="search_for_fruit_from_all">Search for fruit</string>
    <string name="fruit_name_hint">Fruit Name</string>
    <string name="purge_favourite_fruit">Purge favourite fruit</string>
    <string-array name="families_array">
        <item>Rosaceae</item>
        <item>Musaceae</item>
        <item>Moraceae</item>
        <item>Grossulariaceae</item>
        <item>Myrtaceae</item>
        <item>Rutaceae</item>
        <item>Ericaceae</item>
        <item>Sapindaceae</item>
        <item>Anacardiaceae</item>
        <item>Cucurbitaceae</item>
        <item>Caricaceae</item>
        <item>Passifloraceae</item>
        <item>Ebenaceae</item>
        <item>Bromeliaceae</item>
        <item>Solanaceae</item>
    </string-array>
    <string name="bt_findByName">Find by name</string>
    <string name="bt_findByFam">Find by family</string>
    <string name="bt_myFav">My favourites</string>
    <string name="bt_calc">Calculator</string>
    <string name="bt_set">Settings</string>
    <string name="add_fruit">Add Fruit</string>
    <string name="write_value">Write value in gramms</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="genus">Genus</string>
    <string name="order">Order</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="calories">Calories</string>
    <string name="sugar">Sugar</string>
    <string name="delete">Delete</string>
    <string name="go_to_url_page">Go to URL page</string>
    <string name="go_to"><a href='http://www.google.com'> Google </a></string>
</resources>