<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_Main_Screen"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        android:elevation="6dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fruit Atlas"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/Card_Main_Screen"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/fragment_main_bt_findByFam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/bt_findByFam"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_main_bt_findByName" />

            <Button
                android:id="@+id/fragment_main_bt_findByName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/bt_findByName"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <Button
            android:id="@+id/fragment_main_bt_myFav"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/bt_myFav"
            android:textSize="25sp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_main_bt_findByFam" />

        <Button
            android:id="@+id/fragment_main_bt_calc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/bt_calc"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_main_bt_myFav" />

        <Button
            android:id="@+id/fragment_main_bt_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/bt_set"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_main_bt_calc" />



    </LinearLayout>



</LinearLayout>